# ToolBasView

./: .gitignore  CMakeLists.txt  README.md  changelog.md  conanfile.py
.github/workflows/: build-windows.yml  release-osx.yml  release-windows.yml  unittest-linux.yml
art/: fish.icns  results_bmp.cpp  results_bmp.h  toolbasview.icns  toolbasview_bmp.cpp  toolbasview_bmp.h
doc/: mac_doxfile
doc/html/: _dialogs__ops_8cpp-source.html  _dialogs__ops_8cpp.html  _dialogs__ops_8cpp__incl.map  _dialogs__ops_8cpp__incl.md5  _dialogs__ops_8h-source.html  _dialogs__ops_8h.html  _dialogs__ops_8h__dep__incl.map  _dialogs__ops_8h__dep__incl.md5  _dialogs__ops_8h__incl.map  _dialogs__ops_8h__incl.md5  annotated.html  build_2database_8cpp-source.html  build_2database_8h-source.html  class_data_base-members.html  class_data_base.html  class_grid_operation-members.html  class_grid_operation.html  class_s_q_l_p_r_o_c_e_s_s___d_l_g___o_p-members.html  class_s_q_l_p_r_o_c_e_s_s___d_l_g___o_p.html  class_s_q_l_p_r_o_c_e_s_s___d_l_g___o_p__coll__graph.map  class_s_q_l_p_r_o_c_e_s_s___d_l_g___o_p__coll__graph.md5  class_t_b_v_app-members.html  class_t_b_v_app.html  class_t_b_v_frame-members.html  class_t_b_v_frame.html  class_t_b_v_frame__coll__graph.map  class_t_b_v_frame__coll__graph.md5  database_8cpp-source.html  database_8h-source.html  database_8h.html  database_8h__dep__incl.map  database_8h__dep__incl.md5  database_8h__incl.md5  dialogs_8cpp-source.html  dialogs_8cpp.html  dialogs_8cpp__incl.map  dialogs_8cpp__incl.md5  dialogs_8h-source.html  dialogs_8h.html  dialogs_8h__dep__incl.map  (+27 more)
doc/latex/: _dialogs__ops_8cpp.tex  _dialogs__ops_8cpp__incl.dot  _dialogs__ops_8cpp__incl.eps  _dialogs__ops_8cpp__incl.md5  _dialogs__ops_8h.tex  _dialogs__ops_8h__dep__incl.dot  _dialogs__ops_8h__dep__incl.eps  _dialogs__ops_8h__dep__incl.md5  _dialogs__ops_8h__incl.dot  _dialogs__ops_8h__incl.eps  _dialogs__ops_8h__incl.md5  annotated.tex  class_data_base.tex  class_grid_operation.tex  class_s_q_l_p_r_o_c_e_s_s___d_l_g___o_p.tex  class_s_q_l_p_r_o_c_e_s_s___d_l_g___o_p__coll__graph.dot  class_s_q_l_p_r_o_c_e_s_s___d_l_g___o_p__coll__graph.eps  class_s_q_l_p_r_o_c_e_s_s___d_l_g___o_p__coll__graph.md5  class_t_b_v_app.tex  class_t_b_v_frame.tex  class_t_b_v_frame__coll__graph.dot  class_t_b_v_frame__coll__graph.eps  class_t_b_v_frame__coll__graph.md5  database_8h.tex  database_8h__dep__incl.dot  database_8h__dep__incl.eps  database_8h__dep__incl.md5  database_8h__incl.dot  database_8h__incl.eps  database_8h__incl.md5  dialogs_8cpp.tex  dialogs_8cpp__incl.dot  dialogs_8cpp__incl.eps  dialogs_8cpp__incl.md5  dialogs_8h.tex  dialogs_8h__dep__incl.dot  dialogs_8h__dep__incl.eps  dialogs_8h__dep__incl.md5  dialogs_8h__incl.dot  dialogs_8h__incl.eps  (+15 more)
docs/ui/: dialogs.pjd  dialogs.pjd.bak
help/: build_instructions.md
include/: Dialogs_ops.h  database.h  dialogs.h  gisdataprovider.h  gridoperation.h  interface.h  main.h  searchspatialpoint_dlg.h
install/linux/: ToolBasView.desktop
licence/: cddl.txt
resource/: addspatialdata_dlg.h  deletetabledata_dlg.h  dialogs-autosave.pjd  dialogs.pjd  dialogs.pjd.bak  interfaceaui.fbp  main_pane_wdr.h  searchspatialpoint_dlg.h
resources/ui/: changecolumn_dlg.fbp  database-operations.fbp  dialogs-autosave.pjd  export-csv_dlg.fbp  interface.fbp  interface_new.fbp
resources/uml/: 128003  128003.bodies  128033.diagram  128259.bodies  128643.bodies  128771.bodies  129155.bodies  129411.bodies  129539.bodies  130051.bodies  130307.bodies  3.session  33.session
ressource/: dialogs.wdr  main_pane.wdr  main_pane_wdr.cpp  main_pane_wdr.h
src/: Dialogs_ops.cpp  Excel.cpp  Excel.h  ToolBasView.rc  addspatialdata_dlg.cpp  addspatialdata_dlg.h  changecolumn_dlg.cpp  changecolumn_dlg.h  database.cpp  database.h  databaseoperation.cpp  databaseoperation.h  databaseresult.cpp  databaseresult.h  deletetabledata_dlg.cpp  deletetabledata_dlg.h  dialogs.cpp  dialogs.h  dlg_operation.cpp  dlg_operation.h  exportcsv_dlg.cpp  exportcsv_dlg.h  frameabout.cpp  frameabout.h  gisdataprovider.cpp  gisdataprovider.h  gridoperation.cpp  gridoperation.h  interface.cpp  interface.h  main.cpp  main.h  querylisttree.cpp  querylisttree.h  resource.rc  resultsframe.cpp  resultsframe.h  searchspatialpoint_dlg.cpp  searchspatialpoint_dlg.h  tableexport.cpp  (+8 more)
test/: CMakeLists.txt  test.cpp  test_param.h.in
test/data/: auto.cnf
test/data/test_prj/: dmn_attribut_value.MYD  dmn_attribut_value.MYI  dmn_attribut_value.frm  dmn_catalog.MYD  dmn_catalog.MYI  dmn_catalog.frm  dmn_layer_attribut.MYD  dmn_layer_attribut.MYI  dmn_layer_attribut.frm  dmn_layer_object.MYD  dmn_layer_object.MYI  dmn_layer_object.frm  dmn_layer_type.MYD  dmn_layer_type.MYI  dmn_layer_type.frm  dmn_shortcut_key.MYD  dmn_shortcut_key.MYI  dmn_shortcut_key.frm  export_poly.MYI  export_poly.frm  generic_aat.MYD  generic_aat.MYI  generic_aat.frm  generic_dmn.MYI  generic_dmn.frm  generic_frame.MYD  generic_frame.MYI  generic_frame.frm  generic_labels.MYD  generic_labels.MYI  generic_labels.frm  generic_lat.MYD  generic_lat.MYI  generic_lat.frm  generic_lines.MYD  generic_lines.MYI  generic_lines.frm  generic_notes.MYI  generic_notes.frm  generic_pat.MYD  (+45 more)
test/src_test/: database_test.cpp
trunk/art/: myslq.xpm  results_bmp.cpp  results_bmp.h  toolbasview.icns  toolbasview_bmp.cpp  toolbasview_bmp.h
trunk/include/: addspatialdata_dlg.h  database.h  dialogs.h  dlg_operation.h  gisdataprovider.h  interface.h  main.h  searchspatialpoint_dlg.h
trunk/licence/: gpl.txt
trunk/resource/: addspatialdata_dlg.cpp  deletetabledata_dlg.cpp  dialogs-autosave.pjd  dialogs.pjd  interface.fbp  interface_new.fbp  interface_results.fbp  interfaceaui.fbp  searchspatialpoint_dlg.cpp
trunk/src/: Excel.h  ToolBasView.rc  addspatialdata_dlg.cpp  addspatialdata_dlg.h  database.cpp  databaseoperation.cpp  databaseresult.cpp  databaseresult.h  deletetabledata_dlg.h  dialogs.cpp  dlg_operation.cpp  dlg_operation.h  exportcsv_dlg.cpp  exportcsv_dlg.h  gisdataprovider.cpp  gridoperation.cpp  gridoperation.h  interface.cpp  main.h  (+10 more)
txt/: changelog.txt
(+50 files in other folders)
